examples/mood/tests/fixtures/add_an_enum.mood.expected
Error: Expected a number.:
 --> add_an_enum.mood:5:5

  | pub fn test(): f64 {
5 |     Foo::Bar + 1.0_f64
  |     ^^^^^^^^ This expression is not numeric.
  | }
